--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
